--- a/src/templates/pages/index.ejs
+++ b/src/templates/pages/index.ejs
@@ -1,7 +1,8 @@
 <% include ../components/global/head %>
 <% include ../components/global/header %>
-<% include ../components/pages-list %>
+<section class="section">
+    <% include ../components/animation %>
+</section>
 <% include ../components/global/footer %>
 <% include ../components/global/foot %>
-
 
