--- a/src/less/components/common/global.less
+++ b/src/less/components/common/global.less
@@ -1,9 +1,15 @@
 body{
-    background-color: #4256AD;
+    margin: 0;
+    padding: 0;
 }
 .section{
     width: 100%;
     padding: 40px 0;
+}
+.first{
+    background-image: -webkit-linear-gradient(left, #005872, #a63c92);
+    background-image: linear-gradient(to right, #005872, #a63c92);
+    height:100vh;
 }
 .anim{
     position: relative;
@@ -78,4 +84,20 @@ body{
         left: 170px;
     }
 
+}
+
+.section-title{
+    h1,h2,h3,h4,h5,h6{
+        color: #ffffff;
+        text-align: center;
+        font-size: 48px;
+        margin: 0 0 40px 0;
+    }
+}
+.bg-white{
+    background-color: @brand-white;
+}
+
+.first-section{
+    height: 100vh;
 }
