--- a/src/templates/pages/index.ejs
+++ b/src/templates/pages/index.ejs
@@ -1,5 +1,14 @@
 <% include ../components/global/head %>
 <% include ../components/global/header %>
+
+<section class="section bg-white first-section ">
+
+</section>
+
+<section class="section first">
+    <% include ../components/index %>
+</section>
+
 <section class="section">
     <% include ../components/animation %>
 </section>
