--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -26,7 +26,7 @@
 // Fonts
 @fonts-path:                '../fonts';
 /*@font-family-serif:         'Droid Serif', serif;*/
-@font-family-sans-serif:    'Conv_MavenPro-Regular';
+@font-family-sans-serif:    'Open Sans';
 @font-secondary :         'pt_sans_captionregular';
 
 
@@ -111,3 +111,5 @@
 // content
 @content-text-color: #777777;
 @content-text-bg: #FFFFFF;
+
+@brand-white : #FFFFFF;
