--- a/src/templates/components/global/head.ejs
+++ b/src/templates/components/global/head.ejs
@@ -7,6 +7,7 @@
     <meta name="description" content="Lorem ipsum">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
