add scrollMagic and test

--- a/src/templates/pages/index.ejs
+++ b/src/templates/pages/index.ejs
@@ -1,5 +1,11 @@
 <% include ../components/global/head %>
+<section class="head" style="width: 100%; height: 100vh;">
+
+</section>
 <% include ../components/global/header %>
+
+
+
 
 <section class="section bg-white first-section ">
 
